Updated data processing

--- a/fraud_detection/data_preprocessing/data_preprocessing2.ipynb
+++ b/fraud_detection/data_preprocessing/data_preprocessing2.ipynb
@@ -355,6 +355,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "049647a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install torch==1.12.0 torchtext==0.13.0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "CVCj3yw5qolk",
    "metadata": {
@@ -405,6 +415,18 @@
     "from sklearn.model_selection import train_test_split\n",
     "from nltk.corpus import words\n",
     "# Download necessary NLTK corpora\n",
+    "import nltk\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('words')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5aab3ec5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import nltk\n",
     "nltk.download('stopwords')\n",
     "nltk.download('words')"
@@ -692,47 +714,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "vp9gJzwVEesZ",
-   "metadata": {
-    "id": "vp9gJzwVEesZ"
-   },
-   "outputs": [],
-   "source": [
-    "# # Creating vocabulary:\n",
-    "\n",
-    "# from collections import Counter\n",
-    "\n",
-    "# # tokenizer function using split\n",
-    "# def simple_tokenizer(text):\n",
-    "#     return word_tokenize(text.lower())\n",
-    "\n",
-    "# # generator function to yield tokens\n",
-    "# def yield_tokens(data_iter):\n",
-    "#     for text in data_iter:\n",
-    "#         yield simple_tokenizer(text)\n",
-    "\n",
-    "# # build vocabulary using Counter and add special tokens\n",
-    "# def build_vocab_from_iterator(iterator, specials=None):\n",
-    "#     word_freq = Counter()\n",
-    "#     for tokens in iterator:\n",
-    "#         word_freq.update(tokens)\n",
-    "\n",
-    "#     # sort words by frequency (most common first) and include special tokens\n",
-    "#     sorted_vocab = specials + [word for word, freq in word_freq.most_common()]\n",
-    "#     vocab = {word: idx for idx, word in enumerate(sorted_vocab)}\n",
-    "\n",
-    "#     return vocab\n",
-    "\n",
-    "# # build the vocabulary\n",
-    "# vocab = build_vocab_from_iterator(yield_tokens(email_content), specials=[\"<pad>\"])\n",
-    "\n",
-    "# # print the vocabulary and default index\n",
-    "# print(\"Vocabulary:\", vocab)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "id": "M0BMWyjDgTkq",
    "metadata": {
@@ -864,149 +845,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "TDwfViF2kSQX",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "TDwfViF2kSQX",
-    "outputId": "52ca306c-4fe6-434a-f5c0-fd8771cc2c40"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sentence: ['disc', 'uniformitarianism', 'sex', 'dick', 'us', 'use', 'vocative', 'sure', 'fair', 'attribute', 'sons', 'like', 'senior', 'one', 'thing', 'normally', 'use', 'brother', 'way', 'hard', 'imagine', 'natural', 'class', 'senior', 'excluding', 'brother', 'another', 'seem', 'distinction', 'senior', 'relative', 'used', 'variety', 'e', 'g', 'calling', 'distance', 'get', 'someone', 'attention', 'hence', 'beginning', 'utterance', 'whereas', 'natural', 'like', 'yes', 'son', 'hand', 'son', 'like', 'son', 'son', 'help', 'although', 'perhaps', 'latter', 'completely', 'impossible']\n",
-      "Label: 0\n",
-      "si: [2421, 8371, 680, 2451, 14, 25, 10092, 198, 1933, 4063, 5150, 16, 969, 3, 395, 1819, 25, 2775, 55, 329, 1379, 157, 606, 969, 2896, 2775, 181, 682, 1386, 969, 1235, 103, 816, 9, 106, 1461, 1550, 12, 386, 631, 1636, 868, 3109, 1953, 157, 16, 461, 1637, 611, 1637, 16, 1637, 1637, 102, 512, 655, 1920, 1021, 1661, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "tps: tensor([ 2421,  8371,   680,  2451,    14,    25, 10092,   198,  1933,  4063,\n",
-      "         5150,    16,   969,     3,   395,  1819,    25,  2775,    55,   329,\n",
-      "         1379,   157,   606,   969,  2896,  2775,   181,   682,  1386,   969,\n",
-      "         1235,   103,   816,     9,   106,  1461,  1550,    12,   386,   631,\n",
-      "         1636,   868,  3109,  1953,   157,    16,   461,  1637,   611,  1637,\n",
-      "           16,  1637,  1637,   102,   512,   655,  1920,  1021,  1661,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0])\n",
-      "li: 0\n",
-      "\n",
-      "\n",
-      "Sentence: ['side', 'term', 'improper', 'introduction', 'sounding', 'thus', 'deceptive', 'ear', 'often', 'considered', 'would', 'term', 'opposite', 'phenomenon', 'unlawful', 'origin', 'may', 'crept', 'someone', 'provide', 'thank']\n",
-      "Label: 0\n",
-      "si: [864, 266, 7239, 705, 6260, 599, 10526, 2870, 586, 546, 7, 266, 2242, 1262, 8030, 1717, 10, 9735, 386, 134, 230, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "tps: tensor([  864,   266,  7239,   705,  6260,   599, 10526,  2870,   586,   546,\n",
-      "            7,   266,  2242,  1262,  8030,  1717,    10,  9735,   386,   134,\n",
-      "          230,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0])\n",
-      "li: 0\n",
-      "\n",
-      "\n",
-      "Sentence: ['deal', 'still', 'available', 'assist', 'entering', 'new', 'deal', 'talking', 'hull', 'kyle', 'decided', 'need', 'additional', 'sale', 'ticket', 'additional', 'ticket', 'set', 'e', 'subject', 'deal', 'may', 'want', 'run', 'idea', 'farmer', 'normally', 'add', 'e', 'hull', 'subject', 'deal', 'kyle', 'met', 'hull', 'morning', 'decided', 'need', 'new', 'sale', 'ticket', 'new', 'ticket', 'set', 'time', 'period', 'forward', 'new', 'sale', 'ticket', 'like', 'tier', 'new', 'ticket', 'like', 'tier', 'please', 'let', 'know', 'thanks']\n",
-      "Label: 0\n",
-      "si: [146, 133, 49, 1184, 2650, 6, 146, 855, 4446, 4599, 842, 45, 286, 646, 1279, 286, 1279, 164, 9, 8, 146, 10, 59, 369, 558, 1324, 1819, 416, 9, 4446, 8, 146, 4599, 1351, 4446, 609, 842, 45, 6, 646, 1279, 6, 1279, 164, 13, 597, 201, 6, 646, 1279, 16, 4523, 6, 1279, 16, 4523, 5, 112, 32, 81, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "tps: tensor([ 146,  133,   49, 1184, 2650,    6,  146,  855, 4446, 4599,  842,   45,\n",
-      "         286,  646, 1279,  286, 1279,  164,    9,    8,  146,   10,   59,  369,\n",
-      "         558, 1324, 1819,  416,    9, 4446,    8,  146, 4599, 1351, 4446,  609,\n",
-      "         842,   45,    6,  646, 1279,    6, 1279,  164,   13,  597,  201,    6,\n",
-      "         646, 1279,   16, 4523,    6, 1279,   16, 4523,    5,  112,   32,   81,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "           0,    0])\n",
-      "li: 0\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "a7f7ab63",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "for (ts,l,si,tps,li) in zip(tokenized_sentences[0:3], label[0:3], sentences_as_ints[0:3], truncated_padded_sequences[0:3], labels_as_ints[0:3]):\n",
-    "    print(\"Sentence: {}\".format(ts))\n",
-    "    print(\"Label: {}\".format(l))\n",
-    "    print(\"si: {}\".format(si))\n",
-    "    print(\"tps: {}\".format(tps))\n",
-    "    print(\"li: {}\".format(li))\n",
-    "    print(\"\\n\")"
+    "first_sequence, first_label = dataset[0]\n",
+    "\n",
+    "# Print the sequence and label\n",
+    "print(\"First sequence (padded):\", first_sequence)\n",
+    "print(\"First label:\", first_label)"
    ]
   }
  ],
@@ -1030,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
