added saved model

--- a/fraud_detection/url_detection.ipynb
+++ b/fraud_detection/url_detection.ipynb
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "37048280",
+   "id": "67e16663",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55421e7c",
+   "id": "19d0ef3e",
    "metadata": {},
    "source": [
     "## Feature Extraction"
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18d595ab",
+   "id": "6a165fd9",
    "metadata": {},
    "source": [
     "### Check IP"
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bf223952",
+   "id": "95c45984",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0dacae1f",
+   "id": "83e0938e",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c73fd21e",
+   "id": "2c0e9c7c",
    "metadata": {},
    "source": [
     "### Abnormal URL"
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "246ddc45",
+   "id": "1ecf5952",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "38a71d70",
+   "id": "d2933fbd",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b630c94",
+   "id": "a14974d7",
    "metadata": {},
    "source": [
     "### Count of dot (.)"
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cc2a45e0",
+   "id": "8a678f60",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6683324b",
+   "id": "33830edd",
    "metadata": {},
    "source": [
     "### Count of (www)"
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f8140190",
+   "id": "86d50d3f",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c9ae493",
+   "id": "aced77a5",
    "metadata": {},
    "source": [
     "### Count of  (@)"
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cc5ff473",
+   "id": "c0b87dd6",
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8038a00",
+   "id": "f7c688c4",
    "metadata": {},
    "source": [
     "### Count URL Depth"
@@ -1244,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1da7fea2",
+   "id": "45a0dfef",
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5374b5f0",
+   "id": "f9082f1a",
    "metadata": {},
    "source": [
     "### Count of Embedded URL"
@@ -1461,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1b54e22d",
+   "id": "dcc84364",
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ab0db3",
+   "id": "205e7aa0",
    "metadata": {},
    "source": [
     "### Count of Suspicious Words"
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3e7ea28b",
+   "id": "47cc96df",
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efba190c",
+   "id": "bd4d8a3d",
    "metadata": {},
    "source": [
     "### Count Shortening URL"
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "465bc8e0",
+   "id": "783a5fbd",
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfde2570",
+   "id": "6be1cb39",
    "metadata": {},
    "source": [
     "### Count HTTPS"
@@ -2216,7 +2216,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ec6b1fbc",
+   "id": "2c18f571",
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03f7c6fd",
+   "id": "e6375f7b",
    "metadata": {},
    "source": [
     "### Count HTTP"
@@ -2489,7 +2489,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c508fff5",
+   "id": "a678c1b2",
    "metadata": {},
    "outputs": [
     {
@@ -2765,7 +2765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0e11ad0",
+   "id": "a9c7de69",
    "metadata": {},
    "source": [
     "### Count (%)"
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0b334f05",
+   "id": "dfec4ba6",
    "metadata": {},
    "outputs": [
     {
@@ -3075,7 +3075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33a1f6d",
+   "id": "f1a5e1c1",
    "metadata": {},
    "source": [
     "### Count (-)"
@@ -3084,7 +3084,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "90e9d8a0",
+   "id": "5536ee93",
    "metadata": {},
    "outputs": [
     {
@@ -3397,7 +3397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "279352d6",
+   "id": "89cfc3b5",
    "metadata": {},
    "source": [
     "### Count (=)"
@@ -3406,7 +3406,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3d6d810e",
+   "id": "674a8391",
    "metadata": {},
    "outputs": [
     {
@@ -3731,7 +3731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48915686",
+   "id": "6dafd6a2",
    "metadata": {},
    "source": [
     "### Digit Count"
@@ -3740,7 +3740,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "523ca017",
+   "id": "ecaa6daf",
    "metadata": {},
    "outputs": [
     {
@@ -4080,7 +4080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3f732c",
+   "id": "16319efe",
    "metadata": {},
    "source": [
     "### Letter Count"
@@ -4089,7 +4089,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a3f0c9df",
+   "id": "05c5891b",
    "metadata": {},
    "outputs": [
     {
@@ -4441,7 +4441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af1e0b75",
+   "id": "e33942d7",
    "metadata": {},
    "source": [
     "### URL Length"
@@ -4450,7 +4450,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7c237efc",
+   "id": "48f6d52b",
    "metadata": {},
    "outputs": [
     {
@@ -4811,7 +4811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec3d055c",
+   "id": "87637aef",
    "metadata": {},
    "source": [
     "### Hostname Length"
@@ -4820,7 +4820,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "8d3fdce6",
+   "id": "205d7ae5",
    "metadata": {},
    "outputs": [
     {
@@ -5206,7 +5206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f93a1e",
+   "id": "c8770226",
    "metadata": {},
    "source": [
     "### First Directory Length"
@@ -5215,7 +5215,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a0b9be3f",
+   "id": "b937ec9e",
    "metadata": {},
    "outputs": [
     {
@@ -5620,7 +5620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c541b38",
+   "id": "99d9bb4e",
    "metadata": {},
    "source": [
     "### Top Level Domain (TLD) Length"
@@ -5629,7 +5629,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e75d7a2b",
+   "id": "d48e646c",
    "metadata": {},
    "outputs": [
     {
@@ -5647,7 +5647,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "797df085",
+   "id": "6ae6214a",
    "metadata": {},
    "outputs": [
     {
@@ -6055,8 +6055,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "86ce0232",
+   "execution_count": 35,
+   "id": "ff1b81b5",
    "metadata": {},
    "outputs": [
     {
@@ -6429,7 +6429,7 @@
        "[651191 rows x 21 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6442,7 +6442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44fc89f2",
+   "id": "234c19d2",
    "metadata": {},
    "source": [
     "## Train Test Split"
@@ -6450,8 +6450,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "800a1522",
+   "execution_count": 36,
+   "id": "782ccd4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6461,8 +6461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "29af4514",
+   "execution_count": 37,
+   "id": "e4e02eea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6472,8 +6472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "2ef8de25",
+   "execution_count": 38,
+   "id": "1dcf602f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6483,7 +6483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba5beb25",
+   "id": "6fde983a",
    "metadata": {},
    "source": [
     "## Model Training"
@@ -6491,8 +6491,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "87e5d01d",
+   "execution_count": 39,
+   "id": "5de6c144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6503,8 +6503,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "78434348",
+   "execution_count": 40,
+   "id": "82d1aed2",
    "metadata": {},
    "outputs": [
     {
@@ -6539,8 +6539,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "bffd29e2",
+   "execution_count": 41,
+   "id": "05d767bb",
    "metadata": {},
    "outputs": [
     {
@@ -6562,18 +6562,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "8d464389",
+   "execution_count": 42,
+   "id": "baa3afd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: joblib in /Users/ziyaopiong/anaconda3/lib/python3.11/site-packages (1.2.0)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "6e655b74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
+    "import joblib\n",
     "\n",
     "# saving model\n",
-    "rf_pkl = \"rf.pkl\"\n",
-    "with open(rf_pkl, 'wb') as file:\n",
-    "    pickle.dump(rf, file)"
+    "rf_pkl = \"rf.joblib\"\n",
+    "with open(rf_pkl, 'wb') as f:\n",
+    "    joblib.dump(rf, f, compress=3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58734423",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
