added saved model

--- a/fraud_detection/url_detection.ipynb
+++ b/fraud_detection/url_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "8c3d6e97",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "id": "62d35983",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "id": "f9d2103f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../RawData/URLs/malicious_phish.csv')"
+    "df = pd.read_csv('../../URLs/malicious_phish.csv')"
    ]
   },
   {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "67e16663",
+   "id": "b0234110",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d0ef3e",
+   "id": "85360b51",
    "metadata": {},
    "source": [
     "## Feature Extraction"
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a165fd9",
+   "id": "6aa4bdee",
    "metadata": {},
    "source": [
     "### Check IP"
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "95c45984",
+   "id": "1523532c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "83e0938e",
+   "id": "e106cdc2",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c0e9c7c",
+   "id": "9bebf322",
    "metadata": {},
    "source": [
     "### Abnormal URL"
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1ecf5952",
+   "id": "8b062b04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d2933fbd",
+   "id": "11642523",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a14974d7",
+   "id": "ce5c5ab8",
    "metadata": {},
    "source": [
     "### Count of dot (.)"
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8a678f60",
+   "id": "f699bd9a",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33830edd",
+   "id": "a546051c",
    "metadata": {},
    "source": [
     "### Count of (www)"
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "86d50d3f",
+   "id": "9dc67328",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aced77a5",
+   "id": "ff696c79",
    "metadata": {},
    "source": [
     "### Count of  (@)"
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c0b87dd6",
+   "id": "befe29e0",
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7c688c4",
+   "id": "fe7f8bd7",
    "metadata": {},
    "source": [
     "### Count URL Depth"
@@ -1244,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "45a0dfef",
+   "id": "3255d062",
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9082f1a",
+   "id": "c95cc231",
    "metadata": {},
    "source": [
     "### Count of Embedded URL"
@@ -1461,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "dcc84364",
+   "id": "ea21aa43",
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "205e7aa0",
+   "id": "7be7a094",
    "metadata": {},
    "source": [
     "### Count of Suspicious Words"
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "47cc96df",
+   "id": "d7db5a07",
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd4d8a3d",
+   "id": "62786cdf",
    "metadata": {},
    "source": [
     "### Count Shortening URL"
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "783a5fbd",
+   "id": "b3c5313f",
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6be1cb39",
+   "id": "868f4a78",
    "metadata": {},
    "source": [
     "### Count HTTPS"
@@ -2216,7 +2216,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2c18f571",
+   "id": "fddcb12b",
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6375f7b",
+   "id": "c3738784",
    "metadata": {},
    "source": [
     "### Count HTTP"
@@ -2489,7 +2489,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a678c1b2",
+   "id": "ed0e5d9f",
    "metadata": {},
    "outputs": [
     {
@@ -2765,7 +2765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9c7de69",
+   "id": "20dea44f",
    "metadata": {},
    "source": [
     "### Count (%)"
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "dfec4ba6",
+   "id": "9c03576e",
    "metadata": {},
    "outputs": [
     {
@@ -3075,7 +3075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1a5e1c1",
+   "id": "2a00f752",
    "metadata": {},
    "source": [
     "### Count (-)"
@@ -3084,7 +3084,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5536ee93",
+   "id": "51381668",
    "metadata": {},
    "outputs": [
     {
@@ -3397,7 +3397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89cfc3b5",
+   "id": "00ba435b",
    "metadata": {},
    "source": [
     "### Count (=)"
@@ -3406,7 +3406,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "674a8391",
+   "id": "fad7b6cb",
    "metadata": {},
    "outputs": [
     {
@@ -3731,7 +3731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dafd6a2",
+   "id": "4971b47b",
    "metadata": {},
    "source": [
     "### Digit Count"
@@ -3740,7 +3740,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ecaa6daf",
+   "id": "45f0c216",
    "metadata": {},
    "outputs": [
     {
@@ -4080,7 +4080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16319efe",
+   "id": "59618aa6",
    "metadata": {},
    "source": [
     "### Letter Count"
@@ -4089,7 +4089,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "05c5891b",
+   "id": "d4fc7731",
    "metadata": {},
    "outputs": [
     {
@@ -4441,7 +4441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e33942d7",
+   "id": "1f5c7e94",
    "metadata": {},
    "source": [
     "### URL Length"
@@ -4450,7 +4450,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "48f6d52b",
+   "id": "26d91020",
    "metadata": {},
    "outputs": [
     {
@@ -4811,7 +4811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87637aef",
+   "id": "b7e8746f",
    "metadata": {},
    "source": [
     "### Hostname Length"
@@ -4820,7 +4820,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "205d7ae5",
+   "id": "130137a1",
    "metadata": {},
    "outputs": [
     {
@@ -5206,7 +5206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8770226",
+   "id": "5a8ac7f7",
    "metadata": {},
    "source": [
     "### First Directory Length"
@@ -5215,7 +5215,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b937ec9e",
+   "id": "67df04b2",
    "metadata": {},
    "outputs": [
     {
@@ -5620,7 +5620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99d9bb4e",
+   "id": "57cf5705",
    "metadata": {},
    "source": [
     "### Top Level Domain (TLD) Length"
@@ -5629,7 +5629,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d48e646c",
+   "id": "bd9d40cc",
    "metadata": {},
    "outputs": [
     {
@@ -5647,7 +5647,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6ae6214a",
+   "id": "a8a09d3a",
    "metadata": {},
    "outputs": [
     {
@@ -6056,7 +6056,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ff1b81b5",
+   "id": "4fb59e1a",
    "metadata": {},
    "outputs": [
     {
@@ -6442,7 +6442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "234c19d2",
+   "id": "b87df67e",
    "metadata": {},
    "source": [
     "## Train Test Split"
@@ -6451,7 +6451,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "782ccd4d",
+   "id": "09363e4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6462,7 +6462,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e4e02eea",
+   "id": "5b7fe7cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6473,7 +6473,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "1dcf602f",
+   "id": "762d0238",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6483,7 +6483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fde983a",
+   "id": "00dbf721",
    "metadata": {},
    "source": [
     "## Model Training"
@@ -6492,7 +6492,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "5de6c144",
+   "id": "4a3d0ba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6504,7 +6504,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "82d1aed2",
+   "id": "d7974b38",
    "metadata": {},
    "outputs": [
     {
@@ -6540,7 +6540,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "05d767bb",
+   "id": "6422abb8",
    "metadata": {},
    "outputs": [
     {
@@ -6563,7 +6563,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "baa3afd8",
+   "id": "3d844973",
    "metadata": {},
    "outputs": [
     {
@@ -6580,8 +6580,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "6e655b74",
+   "execution_count": 45,
+   "id": "76018108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6596,7 +6596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58734423",
+   "id": "f33fef2a",
    "metadata": {},
    "outputs": [],
    "source": []
