--- a/fraud_detection/url_detection.ipynb
+++ b/fraud_detection/url_detection.ipynb
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b0234110",
+   "id": "7a77808f",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85360b51",
+   "id": "8b03dee5",
    "metadata": {},
    "source": [
     "## Feature Extraction"
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa4bdee",
+   "id": "2518c475",
    "metadata": {},
    "source": [
     "### Check IP"
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1523532c",
+   "id": "5fa655b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e106cdc2",
+   "id": "977e10e2",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bebf322",
+   "id": "db208e50",
    "metadata": {},
    "source": [
     "### Abnormal URL"
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8b062b04",
+   "id": "ccca4980",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "11642523",
+   "id": "7b234d29",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce5c5ab8",
+   "id": "5d4e101e",
    "metadata": {},
    "source": [
     "### Count of dot (.)"
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f699bd9a",
+   "id": "d44f62b1",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a546051c",
+   "id": "2a4d5317",
    "metadata": {},
    "source": [
     "### Count of (www)"
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9dc67328",
+   "id": "7faafea1",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff696c79",
+   "id": "6fc72265",
    "metadata": {},
    "source": [
     "### Count of  (@)"
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "befe29e0",
+   "id": "fb1b038f",
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe7f8bd7",
+   "id": "13cb6f2e",
    "metadata": {},
    "source": [
     "### Count URL Depth"
@@ -1244,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3255d062",
+   "id": "8cccd003",
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c95cc231",
+   "id": "7d9a1bfa",
    "metadata": {},
    "source": [
     "### Count of Embedded URL"
@@ -1461,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ea21aa43",
+   "id": "f4f8ab16",
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be7a094",
+   "id": "86438705",
    "metadata": {},
    "source": [
     "### Count of Suspicious Words"
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d7db5a07",
+   "id": "98b85ae1",
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62786cdf",
+   "id": "a53c9252",
    "metadata": {},
    "source": [
     "### Count Shortening URL"
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b3c5313f",
+   "id": "7d8260d3",
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "868f4a78",
+   "id": "2c5bdf18",
    "metadata": {},
    "source": [
     "### Count HTTPS"
@@ -2216,7 +2216,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fddcb12b",
+   "id": "b134e2c8",
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3738784",
+   "id": "1f22f7db",
    "metadata": {},
    "source": [
     "### Count HTTP"
@@ -2489,7 +2489,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ed0e5d9f",
+   "id": "6f63f375",
    "metadata": {},
    "outputs": [
     {
@@ -2765,7 +2765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20dea44f",
+   "id": "0c42e2db",
    "metadata": {},
    "source": [
     "### Count (%)"
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9c03576e",
+   "id": "6afdac31",
    "metadata": {},
    "outputs": [
     {
@@ -3075,7 +3075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a00f752",
+   "id": "3ad1dc0d",
    "metadata": {},
    "source": [
     "### Count (-)"
@@ -3084,7 +3084,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "51381668",
+   "id": "f8614ebd",
    "metadata": {},
    "outputs": [
     {
@@ -3397,7 +3397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00ba435b",
+   "id": "de66db38",
    "metadata": {},
    "source": [
     "### Count (=)"
@@ -3406,7 +3406,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fad7b6cb",
+   "id": "9889579f",
    "metadata": {},
    "outputs": [
     {
@@ -3731,7 +3731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4971b47b",
+   "id": "dfb4a644",
    "metadata": {},
    "source": [
     "### Digit Count"
@@ -3740,7 +3740,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "45f0c216",
+   "id": "dd249ec6",
    "metadata": {},
    "outputs": [
     {
@@ -4080,7 +4080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59618aa6",
+   "id": "553467b2",
    "metadata": {},
    "source": [
     "### Letter Count"
@@ -4089,7 +4089,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d4fc7731",
+   "id": "611dbfbc",
    "metadata": {},
    "outputs": [
     {
@@ -4441,7 +4441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f5c7e94",
+   "id": "6ba800eb",
    "metadata": {},
    "source": [
     "### URL Length"
@@ -4450,7 +4450,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "26d91020",
+   "id": "ccdd9bf8",
    "metadata": {},
    "outputs": [
     {
@@ -4811,7 +4811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7e8746f",
+   "id": "f76085d3",
    "metadata": {},
    "source": [
     "### Hostname Length"
@@ -4820,7 +4820,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "130137a1",
+   "id": "c9441ace",
    "metadata": {},
    "outputs": [
     {
@@ -5206,7 +5206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a8ac7f7",
+   "id": "78d33442",
    "metadata": {},
    "source": [
     "### First Directory Length"
@@ -5215,7 +5215,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "67df04b2",
+   "id": "59177974",
    "metadata": {},
    "outputs": [
     {
@@ -5620,7 +5620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57cf5705",
+   "id": "89ededda",
    "metadata": {},
    "source": [
     "### Top Level Domain (TLD) Length"
@@ -5629,7 +5629,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "bd9d40cc",
+   "id": "ad820316",
    "metadata": {},
    "outputs": [
     {
@@ -5647,7 +5647,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a8a09d3a",
+   "id": "92f7a6f1",
    "metadata": {},
    "outputs": [
     {
@@ -6056,7 +6056,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4fb59e1a",
+   "id": "17f192ed",
    "metadata": {},
    "outputs": [
     {
@@ -6442,7 +6442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b87df67e",
+   "id": "228b78f0",
    "metadata": {},
    "source": [
     "## Train Test Split"
@@ -6451,7 +6451,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "09363e4e",
+   "id": "9dd664c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6462,7 +6462,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "5b7fe7cf",
+   "id": "d38e4b71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6473,7 +6473,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "762d0238",
+   "id": "1c5016b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6483,7 +6483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00dbf721",
+   "id": "caa713e2",
    "metadata": {},
    "source": [
     "## Model Training"
@@ -6492,7 +6492,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "4a3d0ba3",
+   "id": "14950e9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6504,7 +6504,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d7974b38",
+   "id": "b6c50163",
    "metadata": {},
    "outputs": [
     {
@@ -6540,7 +6540,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "6422abb8",
+   "id": "362017ef",
    "metadata": {},
    "outputs": [
     {
@@ -6563,7 +6563,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "3d844973",
+   "id": "0fd042ea",
    "metadata": {},
    "outputs": [
     {
@@ -6581,7 +6581,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "76018108",
+   "id": "0a2e1cbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6595,8 +6595,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "id": "d19e2ac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.98      0.98     42784\n",
+      "           1       0.98      0.99      0.99      9656\n",
+      "           2       0.99      0.94      0.97      3225\n",
+      "           3       0.91      0.87      0.89      9455\n",
+      "\n",
+      "    accuracy                           0.97     65120\n",
+      "   macro avg       0.96      0.95      0.95     65120\n",
+      "weighted avg       0.97      0.97      0.97     65120\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('rf.joblib', 'rb') as f:\n",
+    "    loaded_rf = joblib.load(f)\n",
+    "    \n",
+    "rf_y_pred = loaded_rf.predict(X_test)\n",
+    "print(classification_report(y_test,rf_y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f33fef2a",
+   "id": "89f1af9f",
    "metadata": {},
    "outputs": [],
    "source": []
